[gd_scene load_steps=11 format=3 uid="uid://bf8gauepq6yex"]

[ext_resource type="Script" uid="uid://dkpg1uj6bri11" path="res://scenes/enemies/green_slime.gd" id="1_uc0f6"]
[ext_resource type="Texture2D" uid="uid://bwnsnj13k6hht" path="res://graphics/enemies/green_slime/green_slime_walking.png" id="2_dvo7u"]
[ext_resource type="Texture2D" uid="uid://m3jk3tx35ujf" path="res://graphics/enemies/green_slime/green_slime_death.png" id="3_hmafg"]
[ext_resource type="Texture2D" uid="uid://bqqcweab3fb5c" path="res://graphics/health_bar/outer.png" id="4_gqdew"]
[ext_resource type="Texture2D" uid="uid://jcjdfv5rvqkq" path="res://graphics/health_bar/progress.png" id="5_0yheu"]

[sub_resource type="Animation" id="Animation_uc0f6"]
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GreenSlimeDeath:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GreenSlimeWalking:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gqdew"]
resource_name = "death"
length = 0.5
step = 0.03
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GreenSlimeDeath:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_dvo7u"]
resource_name = "GreenSlimeWalking"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GreenSlimeWalking:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s1jsf"]
_data = {
&"GreenSlimeWalking": SubResource("Animation_dvo7u"),
&"RESET": SubResource("Animation_uc0f6"),
&"death": SubResource("Animation_gqdew")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_uc0f6"]

[node name="GreenSlime" type="CharacterBody2D"]
scale = Vector2(1, 1.01686)
collision_layer = 4
collision_mask = 15
script = ExtResource("1_uc0f6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_s1jsf")
}
autoplay = "GreenSlimeWalking"

[node name="GreenSlimeDeath" type="Sprite2D" parent="."]
visible = false
scale = Vector2(1.33297, 1.33297)
texture = ExtResource("3_hmafg")
hframes = 3
vframes = 4

[node name="GreenSlimeWalking" type="Sprite2D" parent="."]
scale = Vector2(1.29092, 1.29092)
texture = ExtResource("2_dvo7u")
hframes = 3

[node name="Healthbar" type="TextureProgressBar" parent="."]
offset_left = -10.0
offset_top = -17.7016
offset_right = 30.0
offset_bottom = 22.2984
value = 100.0
texture_over = ExtResource("4_gqdew")
texture_progress = ExtResource("5_0yheu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(-1.7127, 1.59067)
shape = SubResource("CircleShape2D_uc0f6")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
